<resources>
    <string name="app_name">VECOMMERCE</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="copyright">Copyright @ 2019 by Vuhoang020595@gmail.com</string>
    <string name="a_account">Already a member? Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="des_forgot_password">You will receive an email with instructions on resetting password.</string>
    <string name="go_to_sigin">Go back to Sign In.</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_dialog">Thông Báo</string>
    <string name="message_dialog">Quá trình đăng ký tài khoản không thành công vui lòng kiểm tra lại!</string>
    <string name="message_success_dialog">Đăng ký tài khoản thành công vui lòng vào Gmail xác nhận để đăng nhập!</string>
    <string name="message_success_dialog_reset">Vui lòng vào Gmail để xác nhận lại mật khẩu!</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>


    <string name="menu_mall">Home</string>
    <string name="menu_oders">My Oders</string>
    <string name="menu_rewards">My Rewards</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_acoount">My Account</string>
    <string name="menu_logout">Sign Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="status_signin">Not sign in</string>
    <string name="home">Home</string>
    <string name="deals_of_the_day">Deals of the Day!</string>
    <string name="view_all">View All</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="your_ratings">Your Ratings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
